# imguilog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMake_Presets.md  ILog.cpp  ILog.hpp  ILogCommon.h  ILogImGui.cpp  ILogImGui.hpp  README.md  ULogImGui.cpp  ULogImGui.hpp  justfile
examples/: CMakeLists.txt  examples.cpp
utils/: imgui_stdlib.cpp  imgui_stdlib.h
